--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,115 @@
 }
 
 :root {
-  --main-color: #c99a02;
+  --card-color-one: #d6a400;
+  --card-color-two: #276792;
+  --card-color-three: #d36600;
+  --light-gray: #9c9c9c;
 }
 
-.content-wrapper {
-  max-width: 600px;
+.home-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
   margin: auto;
+  padding-bottom: 22rem;
+}
+.addcard-wrapper {
+  display: flex;
+  max-width: 720px;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.form-wrapper {
+  margin: 2rem 0;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.page-header {
+  text-align: center;
+}
+
+input, select {
+  width: 100%;
+  padding: .3rem;
+  border-radius: 5px;
+  border: 1px solid var(--light-gray);
+}
+
+.btn {
+  cursor: pointer;
+  width: max-content;
+  padding: .8rem 2rem;
+  margin: 1rem;
+  color: #0c2546;
+  background-color: var(--card-color-one);
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px var(--light-gray);
+}
+.btn:hover {
+  background-color: #fccb2c;
+}
+.submit-btn {
+  align-self: center;
+}
+.add-btn {
+  position: absolute;
+  top: 5rem;
+  right: 12rem;
 }
 
 .card {
   width: 350px;
   height: 180px;
   padding: 1.5rem;
-  margin: 2rem auto;
   border-radius: 7px;
-  background-color: var(--main-color);
+  box-shadow: 5px 5px 10px #5c5c5c;
+}
+.active-card {
+  margin: 2rem auto;
+}
+.preview-card {
+  background: var(--light-gray);
+  margin: 3rem 1rem;
+}
+.card0, .card1, .card2, .card3 {
+  position: relative;
+}
+.card0 .card {
+  background-color: var(--card-color-one);
+}
+.card1 .card {
+  position: absolute;
+  background-color: var(--card-color-two);
+}
+.card2 .card {
+  position: absolute;
+  top: 4rem;
+  left: 1rem;
+  background-color: var(--card-color-three);
+}
+.card3 .card {
+  position: absolute;
+  top: 8rem;
+  left: 2rem;
+  background-color: var(--card-color-one);
+}
+
+.expire-date {
+  display: flex;
+  justify-content: space-between;
+}
+.error-msg {
+  color: red;
+  font-size: 12px;
+}
+.small-type {
+  color: #5c5c5c;
+  font-size: 13px;
 }
