--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,22 @@
 }
 
 :root {
-  --card-color-one: #d6a400;
-  --card-color-two: #5f93b6;
-  --card-color-three: #cc7626;
-  --card-color-four: #59ad5d;
+  --card-color-one: #d6a810;
+  --card-color-two: #464c52;
+  --card-color-three: #aa3525;
+  --main-color: #6e4167;
   --light-gray: #9c9c9c;
+}
+
+.App {
+  color: #000;
+  font-family: monospace;
 }
 
 .home-wrapper {
   display: flex;
   flex-direction: column;
-  max-width: 350px;
+  max-width: 300px;
   margin: auto;
   padding-bottom: 22rem;
 }
@@ -50,35 +55,51 @@ input, select {
   width: max-content;
   padding: .8rem 2rem;
   margin: 1rem 2rem;
-  color: #0c2546;
-  background-color: var(--card-color-one);
+  background-color: var(--main-color);
+  color: #ebebeb;
   font-weight: 600;
   border: none;
   border-radius: 5px;
   box-shadow: 2px 2px 5px var(--light-gray);
 }
 .btn:hover {
-  background-color: #fccb2c;
+  background-color: #4d105f;
 }
 .submit-btn {
   align-self: center;
 }
 .add-btn {
   position: absolute;
-  top: 1rem;
-  right: 20%;
+  top: 2rem;
+  right: 18%;
 }
 .go-back-btn {
-  padding: .5rem;
+  margin-top: 2rem;
+  padding: .5rem .8rem;
   margin-left: 20%;
+  font-weight: normal;
 }
 
 .card-content {
-  width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 300px;
   height: 180px;
-  padding: 1.5rem;
+  padding: 1rem;
   border-radius: 7px;
   box-shadow: 5px 5px 10px #5c5c5c;
+}
+.card-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50%;
+}
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 .active-card {
   margin: 2rem auto;
@@ -88,12 +109,12 @@ input, select {
   cursor: pointer;
 }
 .preview-card {
-  height: 180px;
   margin: 3rem 1rem;
-  border-radius: 7px;
   background: var(--light-gray);
 }
 .card {
+  position: relative;
+  height: 180px;
   border-radius: 7px;
 }
 .card0 {
@@ -105,9 +126,7 @@ input, select {
 .card2 {
   background-color: var(--card-color-three);
 }
-.card3 {
-  background-color: var(--card-color-four);
-}
+
 .inactive > .card {
   position: absolute;
 }
@@ -123,6 +142,35 @@ input, select {
   top: 6rem;
   left: 4rem;
 }
+.vendor-icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+.far {
+  font-size: 56px;
+}
+.fas {
+  position: absolute;
+  top: 3rem;
+  left: 1rem;
+  font-size: 1.5rem;
+  color: white;
+}
+.vendor-text {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  word-spacing: -.3rem;
+}
+.card-number {
+  width: 100%;
+  font-size: 1.4rem;
+  word-spacing: .2rem;
+}
 
 .expire-date {
   display: flex;
@@ -133,6 +181,19 @@ input, select {
   font-size: 12px;
 }
 .small-type {
-  color: #5c5c5c;
-  font-size: 13px;
+  color: #727272;
+  font-size: 14px;
+}
+.label {
+  font-size: 11px;
+  color: white;
+}
+.front{
+  z-index: 2;
+}
+.middle {
+  z-index: 1;
+}
+.back {
+  z-index: 0;
 }
